kubernetes/apps/kafka/redpanda/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-console
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: Kafka
spec:
  hostnames:
    - "redpanda.${LIMITED_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: redpanda-console
          namespace: kafka
          port: 8080
